zero-schema-macros/tests/ui/fail/68_optional_zero_length_array.stderr
error: zero-length schema arrays are unsupported
  --> tests/ui/fail/68_optional_zero_length_array.rs:12:31
   |
12 |     values: Option<[Required; 0]>,
   |                               ^
